# Ai-Agent-Code-Practice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PDR.md  PRD-tasks.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
apps/bot/: pyproject.toml
apps/bot/src/interview_bot/: main.py  user_repository.py
apps/bot/src/interview_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docker/: bot.Dockerfile  orchestrator.Dockerfile
libs/common/: pyproject.toml
libs/common/src/interview_common/: __init__.py  settings.py
libs/common/src/interview_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sandbox/: README.md
sandbox/cpp/: Dockerfile  run.sh
sandbox/go/: Dockerfile  run.sh
sandbox/java/: Dockerfile  run.sh
sandbox/python/: Dockerfile  run.sh
sandbox/seccomp/: sandbox-seccomp.json
services/orchestrator/: pyproject.toml
services/orchestrator/src/interview_orchestrator/: __init__.py  agent_state.py  evaluation_dataset.py  main.py  sandbox_runner.py  state_steps.py  static_analysis.py  test_runner.py
services/orchestrator/src/interview_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent_state.py  test_bootstrap.py  test_bot_orchestration_flow.py  test_graph_nodes.py  test_offline_dataset.py  test_predefined_test_runner.py  test_python_static_analysis.py  test_sandbox_runner.py  test_sandbox_templates.py  test_submission_validation.py  test_user_repository.py
tmp/: bot.db
