[project]
name = "agentic-interview-assistant-workspace"
version = "0.1.0"
description = "Monorepo workspace for Agentic Interview Coding Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    "apps/bot",
    "services/orchestrator",
    "libs/common",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "services", "libs"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "apps/bot/src",
    "services/orchestrator/src",
    "libs/common/src",
]
