[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-common"
version = "0.1.0"
description = "Shared settings and models for interview assistant"
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
